--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -1391,24 +1391,6 @@
     <Compile Include="Areas\Business\Controllers\CY\CY_KCTSController.cs" />
     <Compile Include="Areas\Business\Controllers\CY\CY_MSController.cs" />
     <Compile Include="Areas\Business\Controllers\CY\CY_WMController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_BGSBController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJDController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_ESJJController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_JDJJBG_JJRYController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_MYFZMR_FZXMXBController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_MYFZMR_MRBJController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_MYFZMR_MYETYPWJController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_QTES_CRYPJBXXController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_QTES_ESSBJBXXController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_BJBDNController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_ESSJController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_PBDNController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_SMCPController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_SJSM_TSJController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_WHYL_TSYXRJController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_WHYL_WTHWYQController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_WHYL_WYXNWPController.cs" />
-    <Compile Include="Areas\Business\Controllers\ES\ES_WHYL_YSPSCPController.cs" />
     <Compile Include="Areas\Business\Controllers\FBCGController.cs" />
     <Compile Include="Areas\Business\Controllers\FC\FC_CKCFTDCWController.cs" />
     <Compile Include="Areas\Business\Controllers\FC\FC_DZFController.cs" />
@@ -1428,6 +1410,7 @@
     <Compile Include="Areas\Business\Controllers\HQSY\HQSY_SYController.cs" />
     <Compile Include="Areas\Business\Controllers\HQSY\HQSY_ZBSSController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\CLController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTFB\ESController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_GLPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJGRController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJJGController.cs" />
@@ -1699,24 +1682,24 @@
     <Content Include="Areas\Business\Views\FC_SP\FC_SP.cshtml" />
     <Content Include="Areas\Business\Views\FC_XZL\FC_XZL.cshtml" />
     <Content Include="Areas\Business\Views\FC_CKCFTDCW\FC_CKCFTDCW.cshtml" />
-    <Content Include="Areas\Business\Views\ES_SJSM_ESSJ\ES_SJSM_ESSJ.cshtml" />
-    <Content Include="Areas\Business\Views\ES_SJSM_BJBDN\ES_SJSM_BJBDN.cshtml" />
-    <Content Include="Areas\Business\Views\ES_SJSM_PBDN\ES_SJSM_PBDN.cshtml" />
-    <Content Include="Areas\Business\Views\ES_SJSM_SMCP\ES_SJSM_SMCP.cshtml" />
-    <Content Include="Areas\Business\Views\ES_SJSM_TSJ\ES_SJSM_TSJ.cshtml" />
-    <Content Include="Areas\Business\Views\ES_JDJJBG_ESJD\ES_JDJJBG_ESJD.cshtml" />
-    <Content Include="Areas\Business\Views\ES_JDJJBG_ESJJ\ES_JDJJBG_ESJJ.cshtml" />
-    <Content Include="Areas\Business\Views\ES_JDJJBG_JJRY\ES_JDJJBG_JJRY.cshtml" />
-    <Content Include="Areas\Business\Views\ES_JDJJBG_BGSB\ES_JDJJBG_BGSB.cshtml" />
-    <Content Include="Areas\Business\Views\ES_MYFZMR_MYETYPWJ\ES_MYFZMR_MYETYPWJ.cshtml" />
-    <Content Include="Areas\Business\Views\ES_MYFZMR_FZXMXB\ES_MYFZMR_FZXMXB.cshtml" />
-    <Content Include="Areas\Business\Views\ES_MYFZMR_MRBJ\ES_MYFZMR_MRBJ.cshtml" />
-    <Content Include="Areas\Business\Views\ES_WHYL_YSPSCP\ES_WHYL_YSPSCP.cshtml" />
-    <Content Include="Areas\Business\Views\ES_WHYL_WTHWYQ\ES_WHYL_WTHWYQ.cshtml" />
-    <Content Include="Areas\Business\Views\ES_WHYL_TSYXRJ\ES_WHYL_TSYXRJ.cshtml" />
-    <Content Include="Areas\Business\Views\ES_WHYL_WYXNWP\ES_WHYL_WYXNWP.cshtml" />
-    <Content Include="Areas\Business\Views\ES_QTES_ESSB\ES_QTES_ESSB.cshtml" />
-    <Content Include="Areas\Business\Views\ES_QTES_CRYP\ES_QTES_CRYP.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_SJSM_ESSJ.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_SJSM_BJBDN.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_SJSM_PBDN.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_SJSM_SMCP.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_SJSM_TSJ.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_JDJJBG_ESJD.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_JDJJBG_ESJJ.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_JDJJBG_JJRY.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_JDJJBG_BGSB.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_MYFZMR_MYETYPWJ.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_MYFZMR_FZXMXB.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_MYFZMR_MRBJ.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_WHYL_YSPSCP.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_WHYL_WTHWYQ.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_WHYL_TSYXRJ.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_WHYL_WYXNWP.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_QTES_ESSB.cshtml" />
+    <Content Include="Areas\Business\Views\ES\ES_QTES_CRYP.cshtml" />
     <Content Include="Areas\Business\Views\CL\CL_ZXCDDCSLC.cshtml" />
     <Content Include="Areas\Business\Views\CL\CL_MTC.cshtml" />
     <Content Include="Config\SpringConfig\BLLCL.xml">
