--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -1382,21 +1382,7 @@
     <Compile Include="Areas\Business\Controllers\BZZX\BZZXController.cs" />
     <Compile Include="Areas\Business\Controllers\BZZX\BZZX_WZJYController.cs" />
     <Compile Include="Areas\Business\Controllers\CommonController.cs" />
-    <Compile Include="Areas\Business\Controllers\CW\CW_CWFWController.cs" />
-    <Compile Include="Areas\Business\Controllers\CW\CW_CWGController.cs" />
-    <Compile Include="Areas\Business\Controllers\CW\CW_CWMController.cs" />
-    <Compile Include="Areas\Business\Controllers\CW\CW_CWYPSPController.cs" />
-    <Compile Include="Areas\Business\Controllers\CW\CW_HNYCController.cs" />
-    <Compile Include="Areas\Business\Controllers\CW\CW_CWZSLYController.cs" />
-    <Compile Include="Areas\Business\Controllers\CY\CY_KCTSController.cs" />
-    <Compile Include="Areas\Business\Controllers\CY\CY_MSController.cs" />
-    <Compile Include="Areas\Business\Controllers\CY\CY_WMController.cs" />
     <Compile Include="Areas\Business\Controllers\FBCGController.cs" />
-    <Compile Include="Areas\Business\Controllers\FC\FC_CKCFTDCWController.cs" />
-    <Compile Include="Areas\Business\Controllers\FC\FC_DZFController.cs" />
-    <Compile Include="Areas\Business\Controllers\FC\FC_ZZFController.cs" />
-    <Compile Include="Areas\Business\Controllers\FC\FC_SPController.cs" />
-    <Compile Include="Areas\Business\Controllers\FC\FC_XZLController.cs" />
     <Compile Include="Areas\Business\Controllers\GRZLController.cs" />
     <Compile Include="Areas\Business\Controllers\HFCZController.cs" />
     <Compile Include="Areas\Business\Controllers\HQSY\HQSY_CZZXController.cs" />
@@ -1410,7 +1396,10 @@
     <Compile Include="Areas\Business\Controllers\HQSY\HQSY_SYController.cs" />
     <Compile Include="Areas\Business\Controllers\HQSY\HQSY_ZBSSController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\CLController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTFB\CWController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTFB\CYController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\ESController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTFB\FCController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_GLPXController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJGRController.cs" />
     <Compile Include="Areas\Business\Controllers\JYPX\JYPX_JJJGController.cs" />
@@ -1625,7 +1614,7 @@
     <Content Include="Areas\Business\Views\ZHMM\ZHMM.cshtml" />
     <Content Include="Areas\Business\Views\WDFB\WDFB.cshtml" />
     <Content Include="Areas\Business\Views\LBXZ\LBXZ.cshtml" />
-    <Content Include="Areas\Business\Views\FC_ZZF\FC_ZZF.cshtml" />
+    <Content Include="Areas\Business\Views\FC\FC_ZZF.cshtml" />
     <Content Include="Areas\Business\Scripts\jquery-ui-1.12.1.custom\package.json" />
     <Content Include="Areas\Business\Scripts\jquery-ui-1.12.1.custom\jquery.ui.datepicker-zh-CN.js" />
     <Content Include="Areas\Business\Ashx\SavePhotos.ashx" />
@@ -1670,7 +1659,7 @@
     <Content Include="Areas\Business\Views\BZZX\BZZX_SY_KSDH_ZHDJYXY.cshtml" />
     <Content Include="Areas\Business\Views\BZZX\BZZX_SY_KSDH_WLFPCS.cshtml" />
     <Content Include="Areas\Business\Views\BZZX\BZZX_SY_KSDH_YYPJKD.cshtml" />
-    <Content Include="Areas\Business\Views\FC_DZF\FC_DZF.cshtml" />
+    <Content Include="Areas\Business\Views\FC\FC_DZF.cshtml" />
     <Content Include="Areas\Business\Scripts\UEditor\net\config.json" />
     <Content Include="Areas\Business\Scripts\UEditor\net\controller.ashx" />
     <Content Include="Areas\Business\Scripts\UEditor\net\README.md" />
@@ -1679,9 +1668,9 @@
     <Content Include="Areas\Business\Scripts\UEditor\third-party\video-js\font\vjs.eot" />
     <Content Include="Areas\Business\Scripts\UEditor\third-party\video-js\font\vjs.ttf" />
     <Content Include="Areas\Business\Scripts\UEditor\third-party\video-js\font\vjs.woff" />
-    <Content Include="Areas\Business\Views\FC_SP\FC_SP.cshtml" />
-    <Content Include="Areas\Business\Views\FC_XZL\FC_XZL.cshtml" />
-    <Content Include="Areas\Business\Views\FC_CKCFTDCW\FC_CKCFTDCW.cshtml" />
+    <Content Include="Areas\Business\Views\FC\FC_SP.cshtml" />
+    <Content Include="Areas\Business\Views\FC\FC_XZL.cshtml" />
+    <Content Include="Areas\Business\Views\FC\FC_CKCFTDCW.cshtml" />
     <Content Include="Areas\Business\Views\ES\ES_SJSM_ESSJ.cshtml" />
     <Content Include="Areas\Business\Views\ES\ES_SJSM_BJBDN.cshtml" />
     <Content Include="Areas\Business\Views\ES\ES_SJSM_PBDN.cshtml" />
@@ -1709,21 +1698,21 @@
     <Content Include="Areas\Business\Views\CL\CL_GCC.cshtml" />
     <Content Include="Areas\Business\Views\Shared\HTFBLayout.cshtml" />
     <Content Include="Areas\Business\Views\CL\CL_KC.cshtml" />
-    <Content Include="Areas\Business\Views\CW_CWG\CW_CWG.cshtml" />
-    <Content Include="Areas\Business\Views\CW_CWM\CW_CWM.cshtml" />
-    <Content Include="Areas\Business\Views\CW_HNYC\CW_HNYC.cshtml" />
-    <Content Include="Areas\Business\Views\CW_CWZSLY\CW_CWZSLY.cshtml" />
-    <Content Include="Areas\Business\Views\CW_CWYPSP\CW_CWYPSP.cshtml" />
-    <Content Include="Areas\Business\Views\CW_CWFW\CW_CWFW.cshtml" />
+    <Content Include="Areas\Business\Views\CW\CW_CWG.cshtml" />
+    <Content Include="Areas\Business\Views\CW\CW_CWM.cshtml" />
+    <Content Include="Areas\Business\Views\CW\CW_HNYC.cshtml" />
+    <Content Include="Areas\Business\Views\CW\CW_CWZSLY.cshtml" />
+    <Content Include="Areas\Business\Views\CW\CW_CWYPSP.cshtml" />
+    <Content Include="Areas\Business\Views\CW\CW_CWFW.cshtml" />
     <Content Include="Areas\Business\Views\CL\CL_JC.cshtml" />
     <Content Include="Areas\Business\Views\PWKQ_DYP\PWKQ_DYP.cshtml" />
     <Content Include="Areas\Business\Views\PWKQ_YCMP\PWKQ_YCMP.cshtml" />
     <Content Include="Areas\Business\Views\PWKQ_YLYJDP\PWKQ_YLYJDP.cshtml" />
     <Content Include="Areas\Business\Views\PWKQ_XFKGWQ\PWKQ_XFKGWQ.cshtml" />
     <Content Include="Areas\Business\Views\PWKQ_QTKQ\PWKQ_QTKQ.cshtml" />
-    <Content Include="Areas\Business\Views\CY_MS\CY_MS.cshtml" />
-    <Content Include="Areas\Business\Views\CY_KCTS\CY_KCTS.cshtml" />
-    <Content Include="Areas\Business\Views\CY_WM\CY_WM.cshtml" />
+    <Content Include="Areas\Business\Views\CY\CY_MS.cshtml" />
+    <Content Include="Areas\Business\Views\CY\CY_KCTS.cshtml" />
+    <Content Include="Areas\Business\Views\CY\CY_WM.cshtml" />
     <Content Include="Areas\Business\Views\XXYL_YDJS\XXYL_YDJS.cshtml" />
     <Content Include="Areas\Business\Views\XXYL_YDJB\XXYL_YDJB.cshtml" />
     <Content Include="Areas\Business\Views\XXYL_HW\XXYL_HW.cshtml" />
