--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -517,7 +517,7 @@
     <Content Include="Areas\Business\Css\HTFB\XXYL\XXYL_YDJS.css" />
     <Content Include="Areas\Business\Css\HTFB\XXYL\XXYL_ZLAM.css" />
     <Content Include="Areas\Business\Css\YHDLXX.css" />
-    <Content Include="Areas\Business\Css\YHGL.css" />
+    <Content Include="Areas\Business\Css\HTGL.css" />
     <Content Include="Areas\Business\Css\YXCZ\YXCZ.css" />
     <Content Include="Areas\Business\Css\YXYZ.css" />
     <Content Include="Areas\Business\Css\YXYZCG.css" />
@@ -662,7 +662,7 @@
     <Content Include="Areas\Business\Scripts\Business\HTFB\FC\FC_ZZFYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\GRZL\GRZL.js" />
     <Content Include="Areas\Business\Scripts\Business\GRZL\MMSZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HBSJ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\HBSJ.js" />
     <Content Include="Areas\Business\Scripts\Business\HFCZ\HFCZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\HQSY\HQSY_CZZX.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\HQSY\HQSY_CZZXYZ.js" />
@@ -723,7 +723,7 @@
     <Content Include="Areas\Business\Scripts\Business\HTFB\JYPX\JYPX_ZXXYDYYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\JYPX\JYPX_ZYJNPX.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\JYPX\JYPX_ZYJNPXYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\LBXZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\Other\LBXZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\LR\LR_KQHL.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\LR\LR_KQHLYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\LR\LR_MFHF.js" />
@@ -836,7 +836,7 @@
     <Content Include="Areas\Business\Scripts\Business\HTFB\QZZP\QZZP_JZZPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\QZZP\QZZP_QZZP.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\QZZP\QZZP_QZZPYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\RZGL\RZGL.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\RZGL.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_CLFW_DJSJWP.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_CLFW_DJSJWPYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\SHFW\SHFW_CLFW_GHSPNJYC.js" />
@@ -933,14 +933,14 @@
     <Content Include="Areas\Business\Scripts\Business\HTFB\SWFW\SWFW_ZHFWYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\SWFW\SWFW_ZK.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\SWFW\SWFW_ZKYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\SY.js" />
-    <Content Include="Areas\Business\Scripts\Business\YHGL\WDFB.js" />
-    <Content Include="Areas\Business\Scripts\Business\YHGL\WDSC.js" />
-    <Content Include="Areas\Business\Scripts\Business\WDXJ\WDXJ_CZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\WDXJ\WDXJ_MXCX.js" />
-    <Content Include="Areas\Business\Scripts\Business\WZCX\WZCX.js" />
-    <Content Include="Areas\Business\Scripts\Business\XXGL\XXGL.js" />
-    <Content Include="Areas\Business\Scripts\Business\XXGL\XXGLMX.js" />
+    <Content Include="Areas\Business\Scripts\Business\Other\SY.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDXX\WDFB.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDXX\WDSC.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDZJ\WDXJ_CZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDZJ\WDXJ_MXCX.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\SHGJ\WZCX.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\XXGL.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\XXGLMX.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\XXYL\XXYL_DIYSGF.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\XXYL\XXYL_DIYSGFYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\XXYL\XXYL_HPG.js" />
@@ -959,16 +959,16 @@
     <Content Include="Areas\Business\Scripts\Business\HTFB\XXYL\XXYL_YDJSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\XXYL\XXYL_ZLAM.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\XXYL\XXYL_ZLAMYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\YHDLXX.js" />
-    <Content Include="Areas\Business\Scripts\Business\YHGL\YHGL.js" />
-    <Content Include="Areas\Business\Scripts\Business\YHJBXX.js" />
+    <Content Include="Areas\Business\Scripts\Business\Other\YHDLXX.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\HTGL.js" />
+    <Content Include="Areas\Business\Scripts\Business\Other\YHJBXX.js" />
     <Content Include="Areas\Business\Scripts\Business\YXCZ\YXCZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\YHGL\YXYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\YXYZCG.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\YXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\YXYZCG.js" />
     <Content Include="Areas\Business\Scripts\Business\ZHBD\WBBD.js" />
     <Content Include="Areas\Business\Scripts\Business\ZHBD\WXBD.js" />
     <Content Include="Areas\Business\Scripts\Business\ZHBD\ZHBD.js" />
-    <Content Include="Areas\Business\Scripts\Business\ZHMM.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\ZHMM.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\ZSJM\ZSJM_CY.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\ZSJM\ZSJM_CYYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\ZSJM\ZSJM_FZXB.js" />
@@ -1419,7 +1419,7 @@
     <Compile Include="Areas\Business\Controllers\WZCXController.cs" />
     <Compile Include="Areas\Business\Controllers\XXGLController.cs" />
     <Compile Include="Areas\Business\Controllers\YHDLXXController.cs" />
-    <Compile Include="Areas\Business\Controllers\YHGLController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGLController.cs" />
     <Compile Include="Areas\Business\Controllers\YHJBXXController.cs" />
     <Compile Include="Areas\Business\Controllers\YXCZController.cs" />
     <Compile Include="Areas\Business\Controllers\ZHBDController.cs" />
@@ -1469,7 +1469,7 @@
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="NHDataSources.config" />
     <Content Include="Areas\Business\Views\YHDLXX\YHDLXX.cshtml" />
-    <Content Include="Areas\Business\Views\YHGL\YHGL.cshtml" />
+    <Content Include="Areas\Business\Views\HTGL\HTGL.cshtml" />
     <Content Include="Areas\Business\Views\ZHMM\ZHMM.cshtml" />
     <Content Include="Areas\Business\Views\WDFB\WDFB.cshtml" />
     <Content Include="Areas\Business\Views\LBXZ\LBXZ.cshtml" />
