--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -199,7 +199,7 @@
     <Content Include="Areas\Business\Css\HTFB\ES\ES_WHYL_WTHWYQ.css" />
     <Content Include="Areas\Business\Css\HTFB\ES\ES_WHYL_WYXNWP.css" />
     <Content Include="Areas\Business\Css\HTFB\ES\ES_WHYL_YSPSCP.css" />
-    <Content Include="Areas\Business\Css\FBCG.css" />
+    <Content Include="Areas\Business\Css\Other\FBCG.css" />
     <Content Include="Areas\Business\Css\HTFB\FC\FC_CKCFTDCW.css" />
     <Content Include="Areas\Business\Css\HTFB\FC\FC_DZF.css" />
     <Content Include="Areas\Business\Css\HTFB\FC\FC_ZZF.css" />
@@ -207,9 +207,9 @@
     <Content Include="Areas\Business\Css\HTFB\FC\FC_XZL.css" />
     <Content Include="Areas\Business\Css\GRZL\GRZL.css" />
     <Content Include="Areas\Business\Css\GRZL\MMSZ.css" />
-    <Content Include="Areas\Business\Css\HBSJ.css" />
-    <Content Include="Areas\Business\Css\HFCZ\HFCZ.css" />
-    <Content Include="Areas\Business\Css\HFCZ\ZFFS.css" />
+    <Content Include="Areas\Business\Css\HTGL\WDZH\HBSJ.css" />
+    <Content Include="Areas\Business\Css\HTGL\SHGJ\HFCZ.css" />
+    <Content Include="Areas\Business\Css\HTGL\SHGJ\ZFFS.css" />
     <Content Include="Areas\Business\Css\HTFB\HQSY\HQSY_CZZX.css" />
     <Content Include="Areas\Business\Css\HTFB\HQSY\HQSY_HCZL.css" />
     <Content Include="Areas\Business\Css\HTFB\HQSY\HQSY_HLGP.css" />
@@ -394,7 +394,7 @@
     <Content Include="Areas\Business\Css\HTFB\JYPX\JYPX_ZXXFDB.css" />
     <Content Include="Areas\Business\Css\HTFB\JYPX\JYPX_ZXXYDY.css" />
     <Content Include="Areas\Business\Css\HTFB\JYPX\JYPX_ZYJNPX.css" />
-    <Content Include="Areas\Business\Css\LBXZ.css" />
+    <Content Include="Areas\Business\Css\Other\LBXZ.css" />
     <Content Include="Areas\Business\Css\HTFB\LR\LR_KQHL.css" />
     <Content Include="Areas\Business\Css\HTFB\LR\LR_MFHF.css" />
     <Content Include="Areas\Business\Css\HTFB\LR\LR_MJ.css" />
@@ -500,12 +500,12 @@
     <Content Include="Areas\Business\Css\HTFB\SWFW\SWFW_ZK.css" />
     <Content Include="Areas\Business\Css\HTFB\SWFW\SWFW_ZL.css" />
     <Content Include="Areas\Business\Css\HTFB\SWFW\SWFW_ZXFW.css" />
-    <Content Include="Areas\Business\Css\SY.css" />
-    <Content Include="Areas\Business\Css\WDFB.css" />
-    <Content Include="Areas\Business\Css\WDSC.css" />
-    <Content Include="Areas\Business\Css\WDXJ\WDXJ_CZ.css" />
-    <Content Include="Areas\Business\Css\WDXJ\WDXJ_MXCX.css" />
-    <Content Include="Areas\Business\Css\WZCX\WZCX.css" />
+    <Content Include="Areas\Business\Css\Other\SY.css" />
+    <Content Include="Areas\Business\Css\HTGL\WDXX\WDFB.css" />
+    <Content Include="Areas\Business\Css\HTGL\WDXX\WDSC.css" />
+    <Content Include="Areas\Business\Css\HTGL\WDZJ\WDXJ_CZ.css" />
+    <Content Include="Areas\Business\Css\HTGL\WDZJ\WDXJ_MXCX.css" />
+    <Content Include="Areas\Business\Css\HTGL\SHGJ\WZCX.css" />
     <Content Include="Areas\Business\Css\XXGL\XXGL.css" />
     <Content Include="Areas\Business\Css\XXGL\XXGLMX.css" />
     <Content Include="Areas\Business\Css\HTFB\XXYL\XXYL_DIYSGF.css" />
@@ -517,15 +517,15 @@
     <Content Include="Areas\Business\Css\HTFB\XXYL\XXYL_YDJB.css" />
     <Content Include="Areas\Business\Css\HTFB\XXYL\XXYL_YDJS.css" />
     <Content Include="Areas\Business\Css\HTFB\XXYL\XXYL_ZLAM.css" />
-    <Content Include="Areas\Business\Css\YHDLXX.css" />
-    <Content Include="Areas\Business\Css\HTGL.css" />
+    <Content Include="Areas\Business\Css\Other\YHDL.css" />
+    <Content Include="Areas\Business\Css\HTGL\HTGL.css" />
     <Content Include="Areas\Business\Css\YXCZ\YXCZ.css" />
-    <Content Include="Areas\Business\Css\YXYZ.css" />
-    <Content Include="Areas\Business\Css\YXYZCG.css" />
+    <Content Include="Areas\Business\Css\HTGL\WDZH\YXYZ.css" />
+    <Content Include="Areas\Business\Css\HTGL\WDZH\YXYZCG.css" />
     <Content Include="Areas\Business\Css\ZHBD\WBBD.css" />
     <Content Include="Areas\Business\Css\ZHBD\WXBD.css" />
     <Content Include="Areas\Business\Css\ZHBD\ZHBD.css" />
-    <Content Include="Areas\Business\Css\ZHMM.css" />
+    <Content Include="Areas\Business\Css\HTGL\WDZH\ZHMM.css" />
     <Content Include="Areas\Business\Css\HTFB\ZSJM\ZSJM_CY.css" />
     <Content Include="Areas\Business\Css\HTFB\ZSJM\ZSJM_FZXB.css" />
     <Content Include="Areas\Business\Css\HTFB\ZSJM\ZSJM_JC.css" />
@@ -665,7 +665,7 @@
     <Content Include="Areas\Business\Scripts\Business\GRZL\GRZL.js" />
     <Content Include="Areas\Business\Scripts\Business\GRZL\MMSZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\HBSJ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HFCZ\HFCZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\SHGJ\HFCZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\HQSY\HQSY_CZZX.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\HQSY\HQSY_CZZXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\HQSY\HQSY_HCZL.js" />
@@ -711,7 +711,7 @@
     <Content Include="Areas\Business\Scripts\Business\HTFB\JYPX\JYPX_YYEJY.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\JYPX\JYPX_YYEJYYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\JYPX\JYPX_YYPXJSYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\HFCZ\ZFFS.js" />
+    <Content Include="Areas\Business\Scripts\Business\HTGL\SHGJ\ZFFS.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\JYPX\JYPX_JJGR.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\JYPX\JYPX_JJGRYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\JYPX\JYPX_JJJG.js" />
@@ -961,9 +961,9 @@
     <Content Include="Areas\Business\Scripts\Business\HTFB\XXYL\XXYL_YDJSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\XXYL\XXYL_ZLAM.js" />
     <Content Include="Areas\Business\Scripts\Business\HTFB\XXYL\XXYL_ZLAMYZ.js" />
-    <Content Include="Areas\Business\Scripts\Business\Other\YHDLXX.js" />
+    <Content Include="Areas\Business\Scripts\Business\Other\YHDL.js" />
     <Content Include="Areas\Business\Scripts\Business\HTGL\HTGL.js" />
-    <Content Include="Areas\Business\Scripts\Business\Other\YHJBXX.js" />
+    <Content Include="Areas\Business\Scripts\Business\Other\YHZC.js" />
     <Content Include="Areas\Business\Scripts\Business\YXCZ\YXCZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\YXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\HTGL\WDZH\YXYZCG.js" />
