--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -109,7 +109,7 @@
     <Compile Include="IWZCXBLL.cs" />
     <Compile Include="IBZZX_WZJYBLL.cs" />
     <Compile Include="IXXGLBLL.cs" />
-    <Compile Include="IYHDLXXBLL.cs" />
+    <Compile Include="IYHDLBLL.cs" />
     <Compile Include="IYHJBXXBLL.cs" />
     <Compile Include="IYXCZBLL.cs" />
     <Compile Include="IZHBDBLL.cs" />
