--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -1420,7 +1420,7 @@
     <Compile Include="Areas\Business\Controllers\WDXJController.cs" />
     <Compile Include="Areas\Business\Controllers\WZCXController.cs" />
     <Compile Include="Areas\Business\Controllers\XXGLController.cs" />
-    <Compile Include="Areas\Business\Controllers\YHDLXXController.cs" />
+    <Compile Include="Areas\Business\Controllers\YHDLController.cs" />
     <Compile Include="Areas\Business\Controllers\HTGLController.cs" />
     <Compile Include="Areas\Business\Controllers\YHJBXXController.cs" />
     <Compile Include="Areas\Business\Controllers\YXCZController.cs" />
@@ -1470,7 +1470,7 @@
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Areas\Business\Scripts\bootstrap-3.3.7\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="NHDataSources.config" />
-    <Content Include="Areas\Business\Views\YHDLXX\YHDLXX.cshtml" />
+    <Content Include="Areas\Business\Views\YHDL\YHDL.cshtml" />
     <Content Include="Areas\Business\Views\HTGL\HTGL.cshtml" />
     <Content Include="Areas\Business\Views\ZHMM\ZHMM.cshtml" />
     <Content Include="Areas\Business\Views\WDFB\WDFB.cshtml" />
