--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -1336,15 +1336,15 @@
       <DependentUpon>png.aspx</DependentUpon>
     </Compile>
     <Compile Include="Areas\Business\BusinessAreaRegistration.cs" />
-    <Compile Include="Areas\Business\Controllers\BaseController.cs" />
+    <Compile Include="Areas\Business\Controllers\OTHER\BaseController.cs" />
     <Compile Include="Areas\Business\Common\QRCodeHelper.cs" />
-    <Compile Include="Areas\Business\Controllers\BZZX\BZZXController.cs" />
-    <Compile Include="Areas\Business\Controllers\BZZX\BZZX_WZJYController.cs" />
-    <Compile Include="Areas\Business\Controllers\CommonController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\BZZXController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\BZZX_WZJYController.cs" />
+    <Compile Include="Areas\Business\Controllers\OTHER\CommonController.cs" />
     <Compile Include="Areas\Business\Controllers\CXLB\FCCXController.cs" />
-    <Compile Include="Areas\Business\Controllers\FBCGController.cs" />
-    <Compile Include="Areas\Business\Controllers\GRZLController.cs" />
-    <Compile Include="Areas\Business\Controllers\HFCZController.cs" />
+    <Compile Include="Areas\Business\Controllers\OTHER\FBCGController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\GRZLController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\HFCZController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\CLController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\CWController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\CYController.cs" />
@@ -1363,21 +1363,21 @@
     <Compile Include="Areas\Business\Controllers\HTFB\XXYLController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\ZSJMController.cs" />
     <Compile Include="Areas\Business\Controllers\HTFB\ZXJCController.cs" />
-    <Compile Include="Areas\Business\Controllers\LBXZController.cs" />
-    <Compile Include="Areas\Business\Controllers\RZGLController.cs" />
-    <Compile Include="Areas\Business\Controllers\SYController.cs" />
-    <Compile Include="Areas\Business\Controllers\WDFBController.cs" />
-    <Compile Include="Areas\Business\Controllers\WDSCController.cs" />
-    <Compile Include="Areas\Business\Controllers\WDXJController.cs" />
-    <Compile Include="Areas\Business\Controllers\WZCXController.cs" />
-    <Compile Include="Areas\Business\Controllers\XXGLController.cs" />
+    <Compile Include="Areas\Business\Controllers\OTHER\LBXZController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\RZGLController.cs" />
+    <Compile Include="Areas\Business\Controllers\OTHER\SYController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\WDFBController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\WDSCController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\WDXJController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\WZCXController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\XXGLController.cs" />
     <Compile Include="Areas\Business\Controllers\XXXX\FCXXController.cs" />
-    <Compile Include="Areas\Business\Controllers\YHDLController.cs" />
-    <Compile Include="Areas\Business\Controllers\HTGLController.cs" />
-    <Compile Include="Areas\Business\Controllers\YHJBXXController.cs" />
-    <Compile Include="Areas\Business\Controllers\YXCZController.cs" />
-    <Compile Include="Areas\Business\Controllers\ZHBDController.cs" />
-    <Compile Include="Areas\Business\Controllers\ZHMMController.cs" />
+    <Compile Include="Areas\Business\Controllers\OTHER\YHDLController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\HTGLController.cs" />
+    <Compile Include="Areas\Business\Controllers\OTHER\YHJBXXController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\YXCZController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\ZHBDController.cs" />
+    <Compile Include="Areas\Business\Controllers\HTGL\ZHMMController.cs" />
     <Compile Include="Areas\Business\Scripts\UEditor\net\App_Code\Config.cs" />
     <Compile Include="Areas\Business\Scripts\UEditor\net\App_Code\ConfigHandler.cs" />
     <Compile Include="Areas\Business\Scripts\UEditor\net\App_Code\CrawlerHandler.cs" />
